<resources>
    <string name="app_name">Aaruush \'17</string>
    <string name="register_string">First Time? <u>Register Here!</u></string>

    <string name="tag">Welcome to the most \n happening fest of the nation</string>
    <string name="fblogin">Sign In with Facebook</string>
    <string name="googlelogin">Sign In with Google</string>

    <string name="icon">Icon</string>

    <string name="facebook_app_id">245206459312176</string>
    <string name="fb_login_protocol_scheme">fb245206459312176</string>

    <string name="stockmarket">Stock Market</string>
    <string name="settings">Settings</string>
    <string name="draweropen">Open</string>
    <string name="drawerclose">Close</string>

    <string name="welcome">Aaruush \'17 \n Welcomes You!</string>
    <string name="testname">Aditya Das</string>

    <string name="notifications">Notifications</string>
    <string name="picturetransition">picture_transition</string>

    <string name="sponsors">Sponsors</string>
    <string name="highlights">Highlights</string>
    <string name="aboutus">About Us</string>
    <string name="patrons">Patrons</string>
    <string name="team">Team</string>
    <string name="developers">Meet The Devs</string>
    <string name="logout">Logout</string>

    <string name="clickit">Click It</string>
    <string name="buildify">Buildify</string>
    <string name="adbees">Ad-Bees</string>
    <string name="digitomania">Digito Mania</string>
    <string name="sourcecode">Source Code 2.0</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">1oh5jqgVbxotvSCWBMvt94xWb</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">lnpjToXr58y2xOD3q4ZUpoMqFhGTJ1b43RcQMOvlLq1sQ1u6Pm</string>

    <string name="aboutusocntent">Ideas. Experimentation. Iteration. Innovation. Development. Implementation. Expansion. Passion. This is what the world feeds on. This is how the world grows. Every idea transforms into innovation after persistent attempts at creating something that can change the world. When we look back upon the decade that has whizzed past us, we see the brilliance with which man has learnt to transform fragments of his imagination into technology that leaves us with nothing short of marvel.
We at Sri Ramaswamy Memorial (SRM) are a family of seven institutions educating and representing the youth of India. SRM University, Kattankulathur has been holding Aaruush, its National level Techno-Management Fest annually for the past 10 years. Aaruush welcomes more than 40,000 footfalls to the campus every year, with zeal and enthusiasm. We at Aaruush strive to bolster the spirit of innovation amongst students and with our motto, "Aaruush towards Infinity" never stop encouraging and inspiring students to break barriers and explore new horizons.
The last 10 years of Aaruush have been a rollercoaster ride of events, lectures, pro-shows, emotions and lots more. Each Aaruush ventures on new roads, exploring new limits and achieving milestones by pure effort.
Each year Aaruush welcomes a variety of teams to showcase their art through exhibitions. Till date, we have welcomed The Indian Army, The Indian Airforce, The Indian Navy and their wide range of war crafts. We have also been witness to the colourful display of botanical plants in the Bonsai Expo, Coin Expo, Stamp Expo, Comic Expo, Harley Davidson expo, History of Madras  to name a few.
Each year Aaruush aims to provide its participants exposure in many fields. To enhance this exposure, we invite guests for the guest lecture series. From the founder of Paypal speaking on the current economy,Ms Shraddha Sharma- founder and chief editor of Your Story, Mr. Rajeeva Karandikar- recipient of Shanti Swaroop Bhatnagar award, to Mr. Isher Ahluwalia, recipient of the Padma Bhushan award in 2009, Aaruush has seen them all. Industrial Conclave, an opportunity for inspiring industrialists to interact with leading personalities from institutes and companies witnessed notable names like Mr. Sharath Babu, founder and CEO of Foodking and Mr. Rajan Parikh, founder of Orion Software Services. The ever popular Unconference brought participants to put forth their ideas on topics such as “NanoNomics” and “Leading India- Science or Politics”.
Aaruush is home to more than fifty events spanning over all spheres of engineering, management science and humanities. With around 14 domains like Electrizite, Fundaz, Yuddhame, Vimanaz, Machination, Konstruktion, Digital Design, BlueBook, Architecture, Presentatio, X Zone,Robogyaan and Magefficie, each individual came out of a room filled with zest and zing. Each event was themed and carried out with exuberance.
With 10 years of continual exponential growth, Aaruush is now confidently stepping into its 11th year. The X1 edition hopes to mark the start of a change into something new. With a wide variety of 50+ events, over 20 inspiring guest lectures, and a concoction of spectacular highlights, this X1 edition has the potential to make waves and just maybe, spark a change. We at Aaruush believe that a spark of passion can ignite the fuel for innovation. Innovation only survives when people believe in their own ideas. And Aaruush only survives when it nurtures, harbours, challenges and provides a platform to these ideas. At Aaruush, it’s not just about the ideas. It’s about making the ideas happen.’</string>

</resources>