<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/sponsors"
            android:icon="@drawable/sponsors"
            android:title="@string/sponsors" />

        <item
            android:id="@+id/stockmarket"
            android:icon="@drawable/stock"
            android:title="@string/stockmarket" />

        <item
            android:id="@+id/highlights"
            android:icon="@drawable/highlights"
            android:title="@string/highlights" />

        <item
            android:id="@+id/aboutus"
            android:icon="@drawable/aboutus"
            android:title="@string/aboutus" />

        <item
            android:id="@+id/patrons"
            android:icon="@drawable/patrons"
            android:title="@string/patrons" />

        <item
            android:id="@+id/team"
            android:icon="@drawable/ourteam"
            android:title="@string/team" />

        <item
            android:id="@+id/developers"
            android:icon="@drawable/developers"
            android:title="@string/developers" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

</menu>