<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/tag"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="30sp"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginStart="30sp"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/roundbutton">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/facebook"
                android:scaleType="fitXY"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/icon"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/facebooklogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/fblogin"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/roundbutton">

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/google"
                android:scaleType="fitXY"
                android:layout_marginStart="20sp"
                android:contentDescription="@string/icon"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/googlelogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/googlelogin"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>